<resources>
    <string name="app_name">Smart Installation</string>
<string name="frag_name">MGVCL Meter Replacement</string>
<string name="form_title">MGVCL - Meter Replacement Note</string>
<string name="book_no_label">Book No.:</string>
<string name="mrn_slip_no_label">MRN Slip No.:</string>
<string name="basic_info_header">Basic Information</string>
<string name="circle_name_label">Circle Name:</string>
<string name="division_label">Division:</string>
<string name="sub_division_label">Sub Division:</string>
<string name="feeder_name_label">Feeder Name:</string>
<string name="dtr_name_code_label">DTR Name/Code:</string>
<string name="date_time_label">Date/Time:</string>
<string name="pole_no_label">Pole No.:</string>
<string name="consumer_name_label">Consumer Name:</string>
<string name="consumer_no_label">Consumer No.:</string>
<string name="consumer_mobile_label">Consumer Mobile No.:</string>
<string name="consumer_address_label">Consumer Address:</string>
<string name="old_meter_info_header">OLD Meter Information</string>
<string name="old_meter_image_label">Old Meter Image:</string>
<string name="new_meter_info_header">NEW Meter Information</string>
<string name="new_meter_image_label">New Meter Image:</string>
<string name="mrn_info_header">MRN Information</string>
<string name="mrn_comparison_header">MRN Comparison</string>
<string name="digital_field_comparison_header">Digital MRN vs Field MRN Comparison</string>
<string name="digital_mrn_old_meter_header">Digital MRN Old Meter</string>
<string name="digital_mrn_smart_meter_header">Digital MRN Smart Meter</string>
<string name="field_mrn_old_meter_header">Field MRN Old Meter</string>
<string name="field_mrn_smart_meter_header">Field MRN Smart Meter</string>
<string name="serial_no_header">S.No.</string>
<string name="parameters_header">Parameters</string>
<string name="details_header">Details</string>
<string name="old_meter_header">Old Meter</string>
<string name="smart_meter_header">Smart Meter</string>
<string name="parameter_header">Parameter</string>
<string name="meter_no_param">Meter No.</string>
<string name="meter_phase_param">Meter Phase</string>
<string name="meter_reading_kwh_param">Meter Reading (kWh)</string>
<string name="meter_md_kw_param">Meter MD (KW) Only LTMD</string>
<string name="meter_manufacturer_param">Meter Manufacturer</string>
<string name="box_seal_available_param">Box Seal Available (Yes/No)</string>
<string name="meter_body_seal_param">Meter Body Seal (Yes/No)</string>
<string name="terminal_seal_no_param">Terminal Seal No. (Yes/No)</string>
<string name="meter_status_param">Meter Status</string>
<string name="old_meter_no_param">Old Meter No.</string>
<string name="old_meter_phase_param">Old Meter Phase</string>
<string name="old_meter_reading_param">Old Meter Reading (kWh)</string>
<string name="old_meter_manufacturer_param">Old Meter Manufacturer</string>
<string name="old_box_seal_param">Old Box Seal Available (Yes/No)</string>
<string name="old_meter_body_seal_param">Old Meter Body Seal (Yes/No)</string>
<string name="old_terminal_seal_param">Old Terminal Seal No. (Yes/No)</string>
<string name="new_meter_no_param">New Meter No.</string>
<string name="new_meter_phase_param">New Meter Phase</string>
<string name="new_meter_reading_param">New Meter Reading (kWh)</string>
<string name="new_meter_manufacturer_param">New Meter Manufacturer</string>
<string name="new_box_seal_param">New Box Seal Available (Yes/No)</string>
<string name="new_meter_body_seal_param">New Meter Body Seal (Yes/No)</string>
<string name="new_terminal_seal_param">New Terminal Seal No. (Yes/No)</string>
<string name="serial_1">1.</string>
<string name="serial_2">2.</string>
<string name="serial_3">3.</string>
<string name="serial_4">4.</string>
<string name="serial_5">5.</string>
<string name="serial_6">6.</string>
<string name="serial_7">7.</string>
<string name="serial_8">8.</string>
<string name="serial_9">9.</string>
<string name="serial_10">10.</string>
<string name="default_book_no">09</string>
<string name="default_mrn_slip_no">0426</string>
<string name="default_old_meter_no">902966</string>
<string name="default_old_meter_phase">1</string>
<string name="default_old_meter_reading">2649</string>
<string name="default_old_meter_manufacturer">HPL</string>
<string name="default_new_meter_no">MGSSEI0030967</string>
<string name="default_new_meter_phase">1</string>
<string name="default_new_meter_reading">0000010</string>
<string name="default_new_meter_manufacturer">L&amp;T</string>
<string name="default_mrn_old_meter_no">MGSSEI0030967</string>
<string name="default_mrn_smart_meter_no">MGTCPG0008530</string>
<string name="default_mrn_old_reading">169797</string>
<string name="default_mrn_smart_reading">03</string>
<string name="default_mrn_old_manufacturer">Genus</string>
<string name="default_mrn_smart_manufacturer">Capital</string>
<string name="default_digital_old_meter_no">902966</string>
<string name="default_digital_smart_meter_no">MGSSEI0030967</string>
<string name="default_field_old_meter_no">MGSSEI0030967</string>
<string name="default_field_smart_meter_no">SC10512222</string>
<string name="status_working">Working</string>
<string name="status_installed">Installed</string>
<string name="status_ok">Ok</string>
<string name="status_not_working">Not Working</string>
<string name="status_damaged">Damaged</string>
<string name="status_replaced">Replaced</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="not_available">Not Available</string>
<string name="signature_section_header">Signatures</string>
<string name="consumer_signature_label">Consumer Signature:</string>
<string name="representative_signature_label">Representative Signature:</string>
<string name="btn_capture_image">Capture Image</string>
<string name="btn_select_image">Select Image</string>
<string name="btn_capture_old_meter">Capture Old Meter</string>
<string name="btn_capture_new_meter">Capture New Meter</string>
<string name="btn_capture_consumer_signature">Consumer Signature</string>
<string name="btn_capture_rep_signature">Representative Signature</string>
<string name="btn_save_form">Save Form</string>
<string name="btn_submit_form">Submit Form</string>
<string name="btn_clear_form">Clear Form</string>
<string name="btn_export_pdf">Export PDF</string>
<string name="btn_previous">Previous</string>
<string name="btn_next">Next</string>
<string name="btn_cancel">Cancel</string>
<string name="btn_ok">OK</string>
<string name="btn_retry">Retry</string>
<string name="btn_search">Search</string>
<string name="btn_select_date">Select Date</string>
<string name="btn_select_time">Select Time</string>
<string name="menu_save">Save</string>
<string name="menu_export">Export</string>
<string name="menu_settings">Settings</string>
<string name="menu_help">Help</string>
<string name="menu_about">About</string>
<string name="menu_logout">Logout</string>
<string name="validation_required_field">This field is required</string>
<string name="validation_invalid_mobile">Please enter a valid mobile number</string>
<string name="validation_invalid_meter_no">Please enter a valid meter number</string>
<string name="validation_invalid_reading">Please enter a valid meter reading</string>
<string name="validation_invalid_date">Please select a valid date</string>
<string name="validation_image_required">Image is required for this section</string>
<string name="validation_signature_required">Signature is required</string>
<string name="validation_form_incomplete">Please complete all required fields</string>
<string name="success_form_saved">Form saved successfully</string>
<string name="success_form_submitted">Form submitted successfully</string>
<string name="success_pdf_exported">PDF exported successfully</string>
<string name="success_image_captured">Image captured successfully</string>
<string name="success_signature_captured">Signature captured successfully</string>
<string name="error_form_save_failed">Failed to save form</string>
<string name="error_form_submit_failed">Failed to submit form</string>
<string name="error_pdf_export_failed">Failed to export PDF</string>
<string name="error_image_capture_failed">Failed to capture image</string>
<string name="error_camera_permission">Camera permission is required</string>
<string name="error_storage_permission">Storage permission is required</string>
<string name="error_network_unavailable">Network connection unavailable</string>
<string name="error_server_error">Server error occurred</string>
<string name="error_invalid_data">Invalid data entered</string>
<string name="progress_saving">Saving form...</string>
<string name="progress_submitting">Submitting form...</string>
<string name="progress_exporting">Exporting PDF...</string>
<string name="progress_loading">Loading...</string>
<string name="progress_uploading">Uploading images...</string>
<string name="status_draft">Draft</string>
<string name="status_completed">Completed</string>
<string name="status_submitted">Submitted</string>
<string name="status_pending">Pending</string>
<string name="status_approved">Approved</string>
<string name="status_rejected">Rejected</string>
<string name="section_basic_info">Basic Information</string>
<string name="section_old_meter">Old Meter Details</string>
<string name="section_new_meter">New Meter Details</string>
<string name="section_mrn_info">MRN Information</string>
<string name="section_comparison">Comparison Data</string>
<string name="section_signatures">Signatures</string>
<string name="hint_enter_book_no">Enter book number</string>
<string name="hint_enter_mrn_slip_no">Enter MRN slip number</string>
<string name="hint_enter_circle_name">Enter circle name</string>
<string name="hint_enter_division">Enter division</string>
<string name="hint_enter_consumer_name">Enter consumer name</string>
<string name="hint_enter_consumer_no">Enter consumer number</string>
<string name="hint_enter_mobile_no">Enter mobile number</string>
<string name="hint_enter_address">Enter complete address</string>
<string name="hint_enter_meter_no">Enter meter number</string>
<string name="hint_enter_reading">Enter meter reading</string>
<string name="hint_select_manufacturer">Select manufacturer</string>
<string name="hint_select_status">Select status</string>
<string name="hint_search_consumer">Search consumer by name or number</string>
<string name="dialog_confirm_clear">Are you sure you want to clear all form data?</string>
<string name="dialog_confirm_submit">Are you sure you want to submit this form?</string>
<string name="dialog_confirm_exit">Are you sure you want to exit without saving?</string>
<string name="dialog_image_source_title">Select Image Source</string>
<string name="dialog_camera_option">Camera</string>
<string name="dialog_gallery_option">Gallery</string>
<string name="dialog_permission_required">Permission Required</string>
<string name="dialog_permission_camera_message">Camera permission is required to capture images</string>
<string name="dialog_permission_storage_message">Storage permission is required to save files</string>
<string name="date_format">dd/MM/yyyy</string>
<string name="time_format">HH:mm</string>
<string name="datetime_format">dd/MM/yyyy HH:mm</string>
<string name="last_saved_format">Last saved: %s</string>
<string name="manufacturer_hpl">HPL</string>
    <string name="mrn_pdf_title">mrn_pdf_title</string>
    <string name="btn_back">btn_back</string>
    <string name="menu">menu</string>
    <string name="btn_previous_page">btn_previous_page\n</string>
    <string name="page_info">page_info</string>
    <string name="btn_next_page">btn_next_page</string>
    <string name="btn_generate_pdf">btn_generate_pdf</string>
    <string name="btn_open">btn_open</string>
    <string name="btn_download">btn_download\n</string>
    <string name="btn_share">btn_share</string>
    <string name="btn_home">btn_home</string>
</resources>